fix: Side navigation z-index

--- a/static/sass/styles.scss
+++ b/static/sass/styles.scss
@@ -1814,7 +1814,7 @@ ol.p-stepped-list.no-full-stop
   position: sticky;
   top: 4rem;
   width: fit-content;
-  z-index: 102;
+  z-index: 1;
 }
 
 .vulnerabilities-content .section-heading {
